--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 API_URL: https://jsonplaceholder.typicode.com/
+DEV_API_URL: https://jsonplaceholder.typicode.com/
+SENTRY_TOKEN: kajsdjhbfkjashdkfj
