--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "formik": "^2.4.2",
     "i18next": "^22.4.10",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
@@ -25,10 +26,13 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-mmkv": "^2.6.2",
     "react-native-reanimated": "^3.0.2",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.20.0",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
